--- a/libs/ocp-sempatch/todo.txt
+++ b/libs/ocp-sempatch/todo.txt
@@ -1,4 +1,4 @@
-(B) 2016-03-22 Portage ocaml 4.01 +compat
+(A) 2016-03-22 Portage ocaml 4.01 +compat
 (C) 2016-03-22 Intégration décente dans un système de build
-(A) 2016-03-22 Développer l'api
+(B) 2016-03-22 Développer l'api
 (C) 2016-03-22 documentation
