--- a/specs/usage.tex
+++ b/specs/usage.tex
@@ -281,7 +281,7 @@ This plugin contains linters which takes different inputs to do their checks
                             semantic patches (user defined)." (current: +A)
 \end{lstlisting}
 
-\subsection{A Short example}
+\subsection{A Short Example}
 
 A typical example of running \ocplint{}:
 \begin{lstlisting}[language=bash,basicstyle=\tt\small]
