Complete Config, Build and Install section

--- a/specs/biblio.bib
+++ b/specs/biblio.bib
@@ -46,3 +46,10 @@ organization = {OCamlPro},
 title =    {ocplib-config},
 howpublished = {\url{https://www.typerex.org/ocp-build.html}},
 }
+
+@Misc{ocp-autoconf,
+author =   {OCamlPro},
+organization = {OCamlPro},
+title =    {ocp-autoconf},
+howpublished = {\url{https://www.typerex.org/ocp-build.html}},
+}
