--- a/specs/typerex-lint.tex
+++ b/specs/typerex-lint.tex
@@ -8,7 +8,7 @@
 \usepackage{float}
 \usepackage{wrapfig}
 \usepackage{authblk}
-
+\usepackage[margin=1.0in]{geometry}
 \usepackage{color}
 \usepackage{amsmath}
 \usepackage{epsfig}
